fix: remove test jobs from docker job needs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
   docker_build:
     name: Build docker containers
     runs-on: ubuntu-latest
-    needs: [backend_lint, backend_typecheck, backend_tests, frontend_lint, frontend_typecheck, frontend_tests]
+    needs: [backend_lint, backend_typecheck, frontend_lint, frontend_typecheck] # TODO: add test jobs when they get unskipped
     steps:
       - name: Checking out repository
         uses: actions/checkout@v4
