fix: eslint - allow console.error and non-default exports in the api directory (until error reporting is standardised)

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -70,5 +70,15 @@
             "extensions": [".ts", ".tsx"]
           }
         }
-    }
+    },
+    "overrides": [
+        {
+            "files": "src/utils/api/*",
+            "rules": {
+                "import/prefer-default-export": "off",
+                "no-console": "off"  // TODO-OLLI(pm): remove this when we unify api error handling
+            }
+        }
+    ],
+    "reportUnusedDisableDirectives": true
 }
