--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,6 @@ jobs:
   backend_tests:
     name: Backend Unit Tests
     runs-on: ubuntu-latest
-    if: false
     permissions:  # required for artifacts
       checks: write
       pull-requests: write
@@ -111,7 +110,7 @@ jobs:
   docker_build:
     name: Build docker containers
     runs-on: ubuntu-latest
-    needs: [backend_lint, backend_typecheck, frontend_lint, frontend_typecheck] # TODO: add test jobs when they get unskipped
+    needs: [backend_lint, backend_typecheck, backend_tests, frontend_lint, frontend_typecheck] # TODO: add test jobs when they get unskipped
     steps:
       - name: Checking out repository
         uses: actions/checkout@v4
