--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "6.22.3",
     "react-scroll": "1.9.0",
     "react-tooltip": "5.26.4",
+    "redis": "^4.7.0",
     "redux": "5.0.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "3.1.0",
