--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@tanstack/react-query": "5.29.2",
     "@tippyjs/react": "4.2.6",
     "antd": "5.20.2",
-    "axios": "1.6.8",
+    "axios": "1.7.7",
     "dayjs": "1.11.11",
     "fast-fuzzy": "1.12.0",
     "framer-motion": "11.0.20",
@@ -37,7 +37,7 @@
     "redux-thunk": "3.1.0",
     "styled-components": "6.1.11",
     "use-debounce": "10.0.1",
-    "uuid": "9.0.1"
+    "zod": "3.23.8"
   },
   "scripts": {
     "start": "vite --port 3000 --host",
@@ -83,7 +83,6 @@
     "@types/react-helmet": "6.1.11",
     "@types/react-scroll": "1.8.10",
     "@types/styled-components": "5.1.34",
-    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.3.1",
     "@typescript-eslint/parser": "7.3.1",
     "@vitejs/plugin-react": "4.2.1",
