--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,40 +4,40 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@ant-design/colors": "7.0.2",
-    "@ant-design/icons": "5.3.7",
-    "@ant-design/plots": "2.2.2",
+    "@ant-design/colors": "7.1.0",
+    "@ant-design/icons": "5.5.1",
+    "@ant-design/plots": "2.3.2",
     "@antv/algorithm": "0.1.26",
     "@antv/g6": "4.8.24",
-    "@react-spring/web": "9.7.3",
-    "@reduxjs/toolkit": "2.2.5",
-    "@rive-app/react-canvas": "4.8.3",
-    "@tanstack/react-query": "5.29.2",
+    "@react-spring/web": "9.7.4",
+    "@reduxjs/toolkit": "2.2.7",
+    "@rive-app/react-canvas": "4.14.1",
+    "@tanstack/react-query": "5.56.2",
     "@tippyjs/react": "4.2.6",
-    "antd": "5.20.2",
-    "axios": "1.6.8",
-    "dayjs": "1.11.11",
+    "antd": "5.20.6",
+    "axios": "1.7.7",
+    "dayjs": "1.11.13",
     "fast-fuzzy": "1.12.0",
-    "framer-motion": "11.0.20",
+    "framer-motion": "11.5.6",
     "jwt-decode": "4.0.0",
-    "rc-picker": "4.3.0",
+    "rc-picker": "4.6.14",
     "react": "18.3.1",
     "react-beautiful-dnd": "13.1.1",
     "react-component-export-image": "1.0.6",
     "react-contexify": "6.0.0",
     "react-dom": "18.3.1",
     "react-helmet": "6.1.0",
-    "react-icons": "5.0.1",
+    "react-icons": "5.3.0",
     "react-redux": "9.1.2",
-    "react-router-dom": "6.22.3",
+    "react-router-dom": "6.26.2",
     "react-scroll": "1.9.0",
-    "react-tooltip": "5.26.4",
+    "react-tooltip": "5.28.0",
     "redux": "5.0.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "3.1.0",
-    "styled-components": "6.1.11",
-    "use-debounce": "10.0.1",
-    "uuid": "9.0.1"
+    "styled-components": "6.1.13",
+    "use-debounce": "10.0.3",
+    "uuid": "10.0.0"
   },
   "scripts": {
     "start": "vite --port 3000 --host",
@@ -71,44 +71,41 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "7.24.7",
-    "@testing-library/dom": "9.3.4",
-    "@testing-library/jest-dom": "6.4.5",
-    "@testing-library/react": "14.2.2",
+    "@babel/core": "7.25.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/google.accounts": "0.0.14",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.11.30",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.5.5",
     "@types/react-beautiful-dnd": "13.1.8",
+    "@types/react-dom": "18.3.0",
     "@types/react-helmet": "6.1.11",
     "@types/react-scroll": "1.8.10",
     "@types/styled-components": "5.1.34",
-    "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "7.3.1",
-    "@typescript-eslint/parser": "7.3.1",
-    "@vitejs/plugin-react": "4.2.1",
-    "axios-mock-adapter": "1.22.0",
-    "eslint": "8.57.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "18.0.0",
+    "@types/uuid": "10.0.0",
+    "@typescript-eslint/eslint-plugin": "8.6.0",
+    "@typescript-eslint/parser": "8.6.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "axios-mock-adapter": "2.0.0",
+    "eslint": "9.11.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-jsx-a11y": "6.10.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.34.2",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-simple-import-sort": "12.0.0",
-    "jsdom": "24.0.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-react": "7.36.1",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "jsdom": "25.0.0",
     "less": "4.2.0",
-    "prettier": "3.2.5",
+    "prettier": "3.3.3",
     "react-is": "18.3.1",
-    "typescript": "5.4.5",
-    "vite": "5.2.6",
-    "vite-plugin-checker": "0.6.4",
+    "typescript": "5.6.2",
+    "vite": "5.4.7",
+    "vite-plugin-checker": "0.8.0",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-svgr": "4.2.0",
-    "vitest": "1.4.0"
+    "vitest": "2.1.1"
   }
 }
