--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -103,6 +103,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/", "vite.config.ts", "vitest.config.ts", ".eslintrc"],
+  "include": ["src/", "vite.config.ts", "vitest.config.ts", "eslint.config.js"],
   "exclude": ["node_modules", "build"]
 }
