--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@tanstack/react-query": "5.29.2",
     "@tippyjs/react": "4.2.6",
     "antd": "5.20.2",
-    "axios": "1.6.8",
+    "axios": "1.7.7",
     "dayjs": "1.11.11",
     "fast-fuzzy": "1.12.0",
     "framer-motion": "11.0.20",
@@ -23,7 +23,6 @@
     "rc-picker": "4.3.0",
     "react": "18.3.1",
     "react-beautiful-dnd": "13.1.1",
-    "react-component-export-image": "1.0.6",
     "react-contexify": "6.0.0",
     "react-dom": "18.3.1",
     "react-helmet": "6.1.0",
@@ -37,7 +36,7 @@
     "redux-thunk": "3.1.0",
     "styled-components": "6.1.11",
     "use-debounce": "10.0.1",
-    "uuid": "9.0.1"
+    "zod": "3.23.8"
   },
   "scripts": {
     "start": "vite --port 3000 --host",
@@ -83,7 +82,6 @@
     "@types/react-helmet": "6.1.11",
     "@types/react-scroll": "1.8.10",
     "@types/styled-components": "5.1.34",
-    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.3.1",
     "@typescript-eslint/parser": "7.3.1",
     "@vitejs/plugin-react": "4.2.1",
@@ -105,7 +103,7 @@
     "prettier": "3.2.5",
     "react-is": "18.3.1",
     "typescript": "5.4.5",
-    "vite": "5.2.6",
+    "vite": "5.4.6",
     "vite-plugin-checker": "0.6.4",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-svgr": "4.2.0",
